fix(css): use visibility instead of display

--- a/css/ruby.scss
+++ b/css/ruby.scss
@@ -1,6 +1,6 @@
 /* wrap element*/
 .GM__ruby-translator.GM__ruby-translator__hidden rt {
-  display: none !important;
+  visibility: hidden !important;
 }
 
 .GM__ruby-translator {
